# scam_detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  EVALUATION_REPORT.md  Project.md  README.md  Task.md  Tree.md  docker-compose.yml  pyproject.toml
configs/: config.yaml  data.yaml  export.yaml  infer.yaml  train.yaml
configs/data/: default.yaml
configs/eval/: default.yaml
configs/export/: default.yaml
configs/hydra/: default.yaml  job_logging.yaml
configs/infer/: default.yaml
configs/logging/: default.yaml  minimal.yaml
configs/model/: baseline.yaml  small_transformer.yaml  transformer.yaml
configs/serve/: default.yaml
configs/train/: default.yaml
data/: Phishing_Email.csv.dvc  scam_messages.csv.dvc
readme_assets/: messages.txt
scam_detection/: commands.py
scam_detection/data/: datamodule.py  dataset.py  download.py  preprocessing.py  schema.py
scam_detection/inference/: predictor.py
scam_detection/models/: baseline.py  lit_module.py  registry.py  transformer.py
scam_detection/serving/: mlflow_model.py
scam_detection/tracking/: git_info.py  mlflow.py
scam_detection/training/: callbacks.py  trainer.py
scripts/: build_tensorrt.sh  export_onnx.py  smoke_test_infer.py
tests/: test_cli_commands.py  test_export_smoke.py  test_infer_smoke.py  test_preprocess.py  test_train_smoke.py
